# occ_gordon

./: .bumpversion.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml  vcpkg.json
.github/workflows/: build.yml
cmake/: FindTBB.cmake  UseOpenCASCADE.cmake  occ_gordon-config.cmake.in
conda/: meta.yaml
docs/: Doxyfile  api.rst  conf.py  conf.py.in  index.rst  requirements.txt  usage.rst
python/: CMakeLists.txt  README.md  common.i  occ_gordon_native.i  pyproject.toml  setup.py
python/cmake/: FindPythonOCC.cmake  OccGordonPythonBindings.cmake
python/examples/: create_wing.py
python/examples/data/: wing_profiles.brep.license
python/occ_gordon/: __init__.py  interpolate_curve_network.py
python/occ_gordon/occ_helpers/: containers.py  topology.py
src/: CMakeLists.txt
src/internal/: BSplineAlgorithms.cpp  BSplineAlgorithms.h  BSplineApproxInterp.cpp  CurveNetworkSorter.cpp  CurvesToSurface.cpp  GordonSurfaceBuilder.cpp  InterpolateCurveNetwork.cpp  InterpolateCurveNetwork.h  IntersectBSplines.cpp  IntersectBSplines.h  PointsToBSplineInterpolation.cpp
src/occ_gordon/: occ_gordon.cpp  occ_gordon.h
tests/: CMakeLists.txt
tests/apitests/: CMakeLists.txt
tests/apitests/src/: main.cpp  testSurfaceModeling.cpp
tests/cmake/: AddGoogleTest.cmake
tests/common/: CMakeLists.txt  testUtils.h
tests/unittests/: CMakeLists.txt  main.cpp  testBSplineIntersection.cpp  testBSplines.cpp  testCurveNetwork.cpp  testUtils.cpp  testctiglbsplinealgorithms.cpp  testctiglcurvestosurface.cpp
