#
# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2024 German Aerospace Center (DLR)
#

[build-system]
requires = [
    "scikit-build-core>=0.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "occ_gordon"
version = "1.4.0"
description = "Curve Network Interpolation for pythonocc"
requires-python = ">=3.9"
authors = [
    { name = "Martin Siggel", email = "martin.siggel@dlr.de" },
]
urls = { Homepage = "https://github.com/rainman110/occ_gordon" }

[tool.scikit-build]
wheel.packages = ["occ_gordon"]

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"

[tool.isort]
profile = "black"
